--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Carlos Loureda <carloslouredaparrado@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "graphql": "^14.5.8"
   }
 }
