Added client.js file for querying the server from the client

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A project to reflect some examples from an introductory post about GraphQL",
   "main": "server.js",
+  "repository": {
+    "url": "https://github.com/carlosloureda/graphql-basic-introduction"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +14,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "node-fetch": "^2.6.0"
   }
 }
